[project]
name = "bluebot"
version = "0.1.0"
description = "Bluesky Reddit Bot"
requires-python = ">=3.13"
dependencies = [
    "atproto==0.0.61",
    "black>=25.1.0",
    "certifi==2025.7.14",
    "ffmpeg-python==0.2.0",
    "pillow==12.1.1",
    "praw",
    "pytesseract>=0.3.13",
    "python-dotenv==1.1.1",
    "requests==2.32.4",
]

[tool.uv.sources]
praw = { git = "https://github.com/praw-dev/praw.git" }
